--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Etch a Sketch</title>
 </head>
 <body>
-    <h1>Etch a Sketch</h1>
+    <div class="container">
+        <div class="content">
+            <h1>Etch a Sketch</h1>
+            <div class="buttons">
+                <button>Black</button>
+                <button>RGB</button>
+                <button>Eraser</button>
+                <button>Reset</button>
+            </div>
+            <div class="grid"></div>
+        </div>
+    </div>
 </body>
 </html>
