--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <div class="content">
             <h1>Etch a Sketch</h1>
             <div class="buttons">
-                <button>Black</button>
-                <button>RGB</button>
-                <button>Eraser</button>
-                <button>Reset</button>
+                <button onclick="chooseColor('black')">Black</button>
+                <button onclick="chooseColor('rgb')">RGB</button>
+                <button onclick="chooseColor('white')">Eraser</button>
+                <button onclick="resetGrid()">Reset</button>
+                <input type="text" placeholder="Grid Size" value="16" id="size" onchange="changeSize(this.value)">
+                <button>Resize</button>
             </div>
             <div class="grid"></div>
         </div>
